--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,12 @@
-#root {
-  margin: 0;
-  text-align: center;
-}
-
-
-
-
-button{
-  font-size: 1em;
-  border-radius: 6px;
-  background-color: blueviolet;
+.wrapper {
+	background-image: url('/images/backgrounds/background_forest.png');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	height: 100%;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
