--- a/src/components/hp-bar/HpBar.scss
+++ b/src/components/hp-bar/HpBar.scss
@@ -6,7 +6,7 @@
 .block__hpBar {
 	// width: 100%;
 	margin-top: adapt(10px, 375px);
-	background-image: url('../../public/images/backgrounds/hp_bar.png');
+	background-image: url('../images/backgrounds/hp_bar.png');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
