--- a/src/components/interact_field/bee/Bee.scss
+++ b/src/components/interact_field/bee/Bee.scss
@@ -10,7 +10,7 @@
 	height: adapt(237.5px, 375px);
 	position: absolute;
 	left: 40%;
-	bottom: 0%;
+	bottom: 0%
 	// animation: static-bee 4s linear infinite;
 	// animation: attack-bee 4s linear infinite;
 }
