--- a/src/components/interact_field/bear/Bear.scss
+++ b/src/components/interact_field/bear/Bear.scss
@@ -5,7 +5,7 @@
 	width: adapt(304px, 375px);
 	height: adapt(356px, 375px);
 	margin-top: adapt(10px, 375px);
-	background-image: url('./animations/static/bear.gif');
+	background-image: url('../animations/static/bear.gif');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
@@ -14,7 +14,7 @@
 }
 
 .static__bear {
-	background-image: url('./animations/static/bear.gif');
+	background-image: url('../animations/static/bear.gif');
 	// animation: static-bear 3s linear infinite;
 }
 
