--- a/src/components/interact_field/bee/Bee.scss
+++ b/src/components/interact_field/bee/Bee.scss
@@ -2,7 +2,7 @@
 @import '../../../assets/styles/animations';
 
 .block__bee {
-	background-image: url('animations/static/bee.gif');
+	background-image: url('../animations/static/bee.gif');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
