--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 	background-position: center;
 	background-size: cover;
 	height: 100%;
+	min-height: auto;
 	position: relative;
 	display: flex;
 	flex-direction: column;
